--- a/src/css/about.css
+++ b/src/css/about.css
@@ -30,9 +30,12 @@ h1 {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    max-width: 33.33%;
+    max-width: 25%;
 }
 
 .aboutContent img {
     width: 256px;
+    border-radius: 16px;
+    box-shadow: -1px 2px 15px rgba(0, 0, 0, .2);
+    margin-bottom: 12px;
 }
