--- a/src/css/carousel.css
+++ b/src/css/carousel.css
@@ -29,7 +29,8 @@
     transition: background-color 100ms ease-in-out;
 }
 
-.carousel-button:hover {
+.carousel-button:hover,
+.carousel-button:focus-visible {
     background-color: rgba(0, 0, 0, .4);
 }
 
@@ -42,4 +43,8 @@
     flex-grow: 0;
     position: relative;
     transition: translate 600ms ease-in-out;
+}
+
+.carousel-button:focus-visible {
+    outline: auto;
 }
