removed tailwind from all css

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -4,10 +4,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 32px;
+    padding-top: 32px;
+    padding-bottom: 32px;
     /*
     Brown: #b38259
     Blue: #121675
+    Mint: #E5ECE9
+    Green-ish: #445552
     */
     box-shadow: -1px 2px 15px rgba(0, 0, 0, .2);
 }
@@ -21,8 +24,8 @@
 h1 {
     display: flex;
     justify-content: center;
-    font-size: xx-large;
-    font-weight: 500;
+    font-size: 3rem;
+    font-weight: 550;
 }
 
 .aboutContent {
