--- a/wwwroot/assets/index.css
+++ b/wwwroot/assets/index.css
@@ -1,6 +1,10 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 body {
     background-color: 	#FAF9F6;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    letter-spacing: .25px;
+}
+
+a {
+    text-decoration: none;
+    color: black;
 }
