--- a/src/css/product.css
+++ b/src/css/product.css
@@ -1,6 +1,59 @@
 .productContainer {
-    border: 2px;
+    width: 15%;
+    min-width: 232px;
+    aspect-ratio: 0.78/1;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
+.productBanner img {
+    width: 100%;
+    aspect-ratio: 1.62/1;
+    overflow: hidden;
+    object-fit: cover;
+    border-radius: 16px;
+}
+
+.productTitle {
+    font-weight: 700;
+    font-size: large;
+    margin-bottom: 4px;
+}
+
+.productTitle hr {
+    width: 98%;
+    border: 1px;
+    border-color: #b38259;
     border-style: solid;
-    border-color: black;
-    width: 10%;
+    margin: 2px;
+}
+
+.productDescription {
+    padding-right: 4px;
+    padding-left: 4px;
+    font-size: 90%;
+}
+
+.productActionButtons {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 8px;
+}
+
+.productActionButtons button {
+    background-color: #121675;
+    color: white;
+    font-weight: 550;
+    font-size: 16px;
+    letter-spacing: 1px;
+    border-radius: 32px;
+    border: none;
+    padding: 4px 16px 4px 16px;
+    height: 50px;
+}
+
+.productActionButtons .favoriteButton {
+    min-width: 50px;
+    padding: 0 !important;
 }
