--- a/wwwroot/assets/index.css
+++ b/wwwroot/assets/index.css
@@ -8,7 +8,7 @@
     */
 
 body {
-    background-color: 	#FAF9F6;
+    background-color: 	#ffffff;
     font-family: "Inter", sans-serif;
     font-weight: 500;
 }
