--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     gap: 18px;
-    width: 60%;
+    width: 70%;
     justify-content: center;
 }
 
@@ -18,16 +18,18 @@
     padding: 8px;
     width: 100%;
     display: flex;
-    min-width: 480px;
+    justify-content: space-between;
 }
 
 .cartItemImg {
     width: 40%;
+    min-width: 162px;
     padding-right: 12px;
 }
 
 .cartItemImg img {
     width: 100%;
+    min-width: 162px;
     aspect-ratio: 1.62/1;
     overflow: hidden;
     object-fit: cover;
