--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -1,24 +1,72 @@
 .cartPage {
     display: flex;
-    width: 60%;
+    width: 70%;
     justify-content: center;
     margin: auto;
+    margin-top: 32px;
+    gap: 32px;
+}
+
+.cartTotalBox {
+    border-radius: 4px;
+    background-color: #F3F3F3;
+    height: fit-content;
+    width: 30%;
+    padding: 8px;
+    box-shadow: -4px -4px 15px rgba(0, 0, 0, .05);
+}
+
+.cartTotalHead {
+    font-size: xx-large;
+    font-weight: 600;
+}
+
+.cartTotalBody {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.cartTotalContainer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.cartTotalSubTotal {
+    line-height: 42px;
+}
+
+.cartTotalBody button {
+    border: none;
+    width: 90%;
+    cursor: pointer;
+    background-color: #121675;
+    color: #ffffff;
+    font-size: large;
+    font-weight: 600;
+    padding: 8px;
+    border-radius: 8px;
+    align-self: center;
+    box-shadow: 2px 2px 15px rgba(0, 0, 0, .05);
 }
 
 .cartItemsBox {
+    border-radius: 4px;
     background-color: #F3F3F3;
     display: flex;
     flex-direction: column;
     gap: 18px;
-    width: 70%;
+    width: 60%;
+    min-width: 400px;
     justify-content: center;
+    box-shadow: -4px -4px 15px rgba(0, 0, 0, .05);
 }
 
 .cartItem {
     padding: 8px;
-    width: 100%;
     display: flex;
     justify-content: space-between;
+    min-width: 400px;
 }
 
 .cartItemImg {
@@ -41,6 +89,7 @@
 .cartItemBody {
     margin-top: 12px;
     margin-bottom: 12px;
+    padding-left: 16px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -71,9 +120,9 @@
 
 .cartItemPrice {
     padding: 16px;
-    width: 20%;
     text-align: end;
     font-weight: 600;
+    white-space: nowrap;
 }
 
 hr {
