--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -45,6 +45,9 @@
     font-size: large;
     font-weight: 600;
     padding: 8px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    margin-top: 8px;
     border-radius: 8px;
     align-self: center;
     box-shadow: 2px 2px 15px rgba(0, 0, 0, .05);
