--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -5,6 +5,7 @@
     margin: auto;
     margin-top: 32px;
     gap: 32px;
+    flex-wrap: wrap;
 }
 
 .cartTotalBox {
@@ -12,6 +13,7 @@
     background-color: #F3F3F3;
     height: fit-content;
     width: 30%;
+    min-width: 230px;
     padding: 8px;
     box-shadow: -4px -4px 15px rgba(0, 0, 0, .05);
 }
@@ -96,6 +98,11 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+.cartItemBody > * {
+    padding-top: 2px;
+    padding-bottom: 2px;
 }
 
 .cartItemHead {
