changed bg color

--- a/wwwroot/assets/index.css
+++ b/wwwroot/assets/index.css
@@ -3,7 +3,7 @@
     /*
     10: Brown: #b38259
     30: Blue: #121675
-    60: Mint: #E5ECE9
+    60: Smoke: #F5F3F5
     Extra: Green-ish: #445552
     */
 
