--- a/src/css/navigation.css
+++ b/src/css/navigation.css
@@ -8,6 +8,7 @@
     line-height: 2.25rem;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     padding: 4px;
+    margin: 8px;
 }
 
 .navbar-start {
