--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,6 +1,6 @@
 .aboutBody {
     width: 100%;
-    background-color: #E5ECE9;
+    background-color: #F5F3F5;
     display: flex;
     flex-direction: column;
     align-items: center;
