--- a/wwwroot/assets/index.css
+++ b/wwwroot/assets/index.css
@@ -14,6 +14,13 @@ body {
     margin: 0;
 }
 
+.root {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100vh;
+}
+
 a {
     text-decoration: none;
     color: black;
