--- a/src/css/logInRegister.css
+++ b/src/css/logInRegister.css
@@ -62,6 +62,9 @@
 
 .logInRegisterActionButtons {
     margin-top: 48px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .logInRegisterActionButtons button {
@@ -70,6 +73,7 @@
     border-radius: 4px;
     width: 100%;
     padding: 12px;
+    margin-bottom: 16px;
     color: white;
     font-size: larger;
     font-weight: 600;
