added some hover states

--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -117,6 +117,10 @@
     font-weight: 600;
 }
 
+.cartItemHead:hover {
+    text-decoration: underline;
+}
+
 .cartItemAmount .cartItemAmountSelect {
     width: 70%;
     aspect-ratio: 1/0.3;
@@ -132,6 +136,12 @@
 .cartItemActionButtons button {
     background-color: #F5F3F5;
     border: none;
+    padding: 2px;
+    border-radius: 4px;
+}
+
+.cartItemActionButtons button:hover {
+    background-color: #d1d1d1;
     cursor: pointer;
 }
 
