--- a/wwwroot/assets/index.css
+++ b/wwwroot/assets/index.css
@@ -2,8 +2,8 @@
 
     /*
     10: Brown: #b38259
-    30: Blue: #121675
-    60: Smoke: #F5F3F5
+    30: Blue: #121675 / Hover: #0b0d42
+    60: Smoke: #F5F3F5 / Hover: #e9e9e9
     Extra: Green-ish: #445552
     */
 
