--- a/src/css/product.css
+++ b/src/css/product.css
@@ -20,6 +20,14 @@
     margin-bottom: 128px;
     margin-left: 5%;
     margin-right: 5%;
+    padding: 8px;
+    border-radius: 4px;
+    transition: background-color 100ms ease-in-out;
+}
+
+.productContainer:hover {
+    background-color: #e9e9e9;
+    cursor: pointer;
 }
 
 .productBanner img {
