--- a/web/src/css/about.css
+++ b/web/src/css/about.css
@@ -1,6 +1,6 @@
 .aboutBody {
     width: 100%;
-    background-color: #F5F3F5;
+    background-color: rgba(22, 23, 114, 0.05);
     display: flex;
     flex-direction: column;
     align-items: center;
