--- a/web/src/css/cart.css
+++ b/web/src/css/cart.css
@@ -10,7 +10,7 @@
 
 .cartTotalBox {
     border-radius: 4px;
-    background-color: #F5F3F5;
+    background-color: rgba(22, 23, 114, 0.025);
     height: fit-content;
     min-width: 230px;
     padding: 8px;
@@ -63,7 +63,7 @@
 
 .cartItemsBox {
     border-radius: 4px;
-    background-color: #F5F3F5;
+    background-color: rgba(22, 23, 114, 0.025);
     display: flex;
     flex-direction: column;
     gap: 18px;
@@ -134,7 +134,7 @@
 }
 
 .cartItemActionButtons button {
-    background-color: #F5F3F5;
+    background: none;
     border: none;
     padding: 2px;
     border-radius: 4px;
