--- a/web/src/css/logInRegister.css
+++ b/web/src/css/logInRegister.css
@@ -10,7 +10,7 @@
     width: 100%;
     min-width: 380px;
     max-width: 600px;
-    background-color: #F5F3F5;
+    background-color: rgba(22, 23, 114, 0.025);
     border-radius: 4px;
     box-shadow: 4px 4px 5px rgba(0, 0, 0, .05), -4px -4px 5px rgba(0, 0, 0, .05);
 }
