--- a/web/src/css/navigation.css
+++ b/web/src/css/navigation.css
@@ -90,7 +90,7 @@
     font-size: 1.30rem;
     line-height: 3rem;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #e9e9e9;
+    background-color: #fafafc;
     border-radius: 16px;
     z-index: 99;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
@@ -129,6 +129,6 @@
 
 .navbar-small-toggle button {
     border: none;
-    background: #e9e9e9;
+    background: none;
     cursor: pointer;
 }
