--- a/web/src/css/account.css
+++ b/web/src/css/account.css
@@ -88,8 +88,16 @@
     padding-top: 24px;
 }
 
+@media screen and (min-width:636px) {
+    .userDataContainer {
+        min-width: 617px;
+    }
+}
+
 .userDataContainerPart {
     display: flex;
+    justify-content: space-between;
+    width: 100%;
 }
 
 .userDataItemContainer {
