--- a/web/src/css/modalBox.css
+++ b/web/src/css/modalBox.css
@@ -19,19 +19,10 @@
     display: flex;
     flex-direction: column;
     width: 40%;
+    min-width: 260px;
     background-color: white;
     border-radius: 4px;
     height: fit-content;
-}
-
-.modalBoxInner {
-    padding: 8px;
-}
-
-.modalBoxInner hr {
-    border-width: 1px;
-    width: 100%;
-    border-color: #121675;
 }
 
 .modalHeader {
@@ -43,4 +34,15 @@
 .modalBody {
     display: flex;
     justify-content: center;
+    padding-block: 24px;
+}
+
+.modalBoxInner {
+    padding: 8px;
+}
+
+.modalBoxInner hr {
+    border-width: 1px;
+    width: 100%;
+    border-color: #121675;
 }
